edit nextjs post, fix markdown error

--- a/data/tutorial/webdev.mdx
+++ b/data/tutorial/webdev.mdx
@@ -72,7 +72,7 @@ Let’s go over what a bunch of the files mean. These are the short notes I reco
 
 **Components/Container**: The default page layout is defined, with the children component encapsulating the page content. Additionally, the footer is imported and placed at the end of the container.
 
-**Components/MDXComponents**: This component maps the markdown elements to react components, introducing new styles to the Markdown default element structure. For example, you can modify the <p> tag annd extend the style of the <p> tag.
+**Components/MDXComponents**: This component maps the markdown elements to react components, introducing new styles to the Markdown default element structure. For example, you can modify the paragraph tag and extend the style of the paragraph tag.
 
 **Pages/api/hello.js**: Serving as a simple API router using JSON, hello.js is responsible for handling API requests. It is the default Next.js api route.
 
