change article links

--- a/data/tutorial/KaggleData2.mdx
+++ b/data/tutorial/KaggleData2.mdx
@@ -8,7 +8,7 @@ summary: 'I provide a tutorial on performing t tests and chi-square tests on a K
 
 ### Now, let's see if we can perform some statistical tests on the data.
 
-This is a continuation of my blog post on using python to analyze data. The link to that blog post is here: [Kaggle Data Analysis Blog Post](https://abneuro.vercel.app/simplestats/KaggleData)
+This is a continuation of my blog post on using python to analyze data. The link to that blog post is here: [Kaggle Data Analysis Blog Post](https://abneuro.vercel.app/tutorial/KaggleData)
 
 In this blog post, we will be taking a look a code that will perform t tests and chi squared tests on medical insurance data: [Medical Insurance Kaggle](https://www.kaggle.com/mirichoi0218/insurance)
 
