--- a/data/tutorial/cafe.mdx
+++ b/data/tutorial/cafe.mdx
@@ -15,7 +15,7 @@ Today, we will go over some code for a café project I did earlier. This project
 1. [Click Here to view the Design Document](https://github.com/abdulolagunju19/CafeProject/blob/23bbfebc7454c883770dfad9016e973e89c40cee/DesignDocument_FinalProject_Cafe.pdf)
 2. [Click Here to view the User Manual](https://github.com/abdulolagunju19/CafeProject/blob/521dd2c639df051e7fa58921a7c26eef8be63a7a/User%20Manual_FinalProject_Cafe.pdf)
 
-**One thing to keep in mind is that the syntax for the functions and classes are not in camelCase, and you should avoid this mistake in your own code.** Here is a link to an article with the entire project in camelCase: [camelCase Café Project](https://abneuro.vercel.app/simplestats/camelCase)
+**One thing to keep in mind is that the syntax for the functions and classes are not in camelCase, and you should avoid this mistake in your own code.** Here is a link to an article with the entire project in camelCase: [camelCase Café Project](https://abneuro.vercel.app/tutorial/camelCase)
 
 There are several files in this project that are important, and I will go over all of them. 
 
