fix philip blog post

--- a/data/blog/philip.mdx
+++ b/data/blog/philip.mdx
@@ -8,7 +8,7 @@ Welcome to another blog post!
 
 ### Quote of the Post
 
-> "I set your glory and the fear of you in all lands, and the terror of you as far as the four supports of the sky...the rulers of all foreign countries are gathered together within thy grasp. I stretch out my hands to bind them for you." - Amon-Re to Thutmose III
+> "There is no wall that is high enough to stop a horse with a cart filled with gold." - Philip II
 
 History has done no favors for Philip II of Macedon. We remember his son, Alexander the Great, but fail to pay Philip the respect a man of his caliber deserves. After all, before a man like Alexander can embark on an audacious conquest of Persia and Eastern Asia, he needs to have a stable home base, secure supply lines, and an effective army. Philip II and his reforms allowed him to have all three. Philip’s cunning resulted in the transformation of Macedonia from a backwater state into the dominant power in the Mediterranean in a matter of decades.
 
